--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#achievements">Achievements</a></li>
             <li><a href="#goals">Future Goals</a></li>
             <li><a href="#personal">Personal Side</a></li>
-            <li><a href="#shop">Shop</a></li>
+<li><a href="shop.html">Shop</a></li>   
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
