--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#achievements">Achievements</a></li>
             <li><a href="#goals">Future Goals</a></li>
             <li><a href="#personal">Personal Side</a></li>
-<li><a href="shop.html">Shop</a></li>   
+            <li><a href="shop.html">Shop</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -129,9 +129,9 @@
         <!-- Contact Section -->
         <section id="contact" class="section box fade-in">
             <h2>Contact Me</h2>
-            <form action="https://formsubmit.co/vikramchoudhary3107@gmail.com" method="POST">
+            <form action="https://formsubmit.co/shayukaularikar@gmail.com" method="POST">
                 <label for="email">Your Email:</label><br>
-                <textarea name="email" id="email" rows="1" placeholder="vikramchoudhary3107@gmail.com"
+                <textarea name="email" id="email" rows="1" placeholder="shayukaularikar@gmail.com"
                     required></textarea><br><br>
 
                 <label for="message">Your Message:</label><br>
